--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/afl.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AFL Network Beta</title>
+    <title>AFL Networks</title>
+    <meta
+      name="description"
+      content="AFL Networks, Open Access Metro Fibre Broadband, Metro Fibre Broadband, Aldreda Fields Limited, AFL Nigeria, Open Access Connectivity, Open Access Aerial Fibre Connectivity, Broadband Lagos, Dark Fibre, Fibre Optic Network, Fast Broadband Internet, Broadband service, Internet Connectivity Lagos, Lagos Smartcity, Internet in Lagos, Fast Internet in Lagos, Fast Fibre in Lagos"
+    />
   </head>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-Y31T8E95YC"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-Y31T8E95YC");
+  </script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
